refactor: more readable src